Fix Checkbox not having blue color

--- a/MemoryMosaic/Shared/MaterialIcon.razor
+++ b/MemoryMosaic/Shared/MaterialIcon.razor
@@ -10,7 +10,7 @@ else if (Icon == "calendar")
 }
 else
 {
-    <span id="@ID" class="@IconClass @Class" style="font-size: @(Size)px @IconStyle" title="@Title">@Icon</span>
+    <span id="@ID" class="@IconClass @Class" style="font-size: @(Size)px; @IconStyle" title="@Title">@Icon</span>
 }
 
 @code {
