Make FV.Index public, and clicking an item with no selection in LCV fullscreens it

--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -77,7 +77,7 @@
 	private ElementVisibility infoVisibility = new();
 	
 	private int index;
-	private int Index
+	public int Index
 	{
 		get => index;
 		set
