Fix issue where CtrlG wouldn't set top loader to be an initializer

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -153,7 +153,7 @@ Items can be selected, and depending on the page, different options may be appli
 	private void StartDateChanged()
 	{
 		Content.Clear();
-		topLoader = new ContentLoader(this, true, false, false);
+		topLoader = new ContentLoader(this, true, false, true);
 		bottomLoader = new ContentLoader(this, true, true, true);
 	}
 }
