--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -70,7 +70,7 @@
 	<KeyboardShortcuts Left="@MoveLeft" Right="@MoveRight"/>
 }
 
-<KeyboardShortcuts Esc="@Disable" I="@infoVisibility.Toggle"/>
+<KeyboardShortcuts AltLeft="@Disable" Esc="@Disable" I="@infoVisibility.Toggle"/>
 
 @code {
 	[Parameter, EditorRequired]
