--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -51,13 +51,13 @@
 				}
 			}
 
-			&:nth-of-type(2) {
+			&#leftBtn {
 				left: 0;
 
 				> .iconBtn { left: 28px }
 			}
 
-			&:last-of-type {
+			&#rightBtn {
 				right: 0;
 
 				> .iconBtn { right: 28px }
