FV's keyboard shortcuts now are disabled when it's not visible

--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -69,12 +69,15 @@
 	</div>
 </div>
 
-@if (!Current.Video)
+@if (Visibility.Visible)
 {
-	<KeyboardShortcuts Left="@MoveLeft" Right="@MoveRight"/>
-}
+	if (!Current.Video)
+	{
+		<KeyboardShortcuts Left="@MoveLeft" Right="@MoveRight"/>
+	}
 
-<KeyboardShortcuts AltLeft="@Disable" Esc="@Disable" I="@infoVisibility.Toggle"/>
+	<KeyboardShortcuts AltLeft="@Disable" Esc="@Disable" I="@infoVisibility.Toggle"/>
+}
 
 @code {
 	[Parameter, EditorRequired]
