--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -121,7 +121,7 @@
 			> span {
 				margin-right: 12px;
 				
-				&:nth-of-type(2) {
+				&:last-of-type {
 					width: 250px;
 					white-space: nowrap;
 					overflow: hidden;
