Move (EventArgs)OnClick to Component. Use HandleClick in most inheritors. Cleanup inheritance structure.

--- a/MemoryMosaic/Shared/Buttons/IconButton.razor
+++ b/MemoryMosaic/Shared/Buttons/IconButton.razor
@@ -1,5 +1,5 @@
 @* Button with just an icon and no text. *@
-@inherits ActionButton
+@inherits Button
 
 <button id="@ID" class="iconBtn @Class" @onclick="@HandleClick" title="@Title">
 	<MaterialIcon Icon="@Icon" IconStyle="@IconStyle"/>
