--- a/MemoryMosaic/Shared/Input/Checkbox.razor
+++ b/MemoryMosaic/Shared/Input/Checkbox.razor
@@ -1,6 +1,6 @@
 @inherits InputComponent<bool>
 
-<div @ref="@input" class="checkbox @(Input ? "checked" : "unchecked")" @onclick="@OnClick">
+<div @ref="@input" class="checkbox @(Input ? "checked" : "unchecked")" @onclick="@(e => { HandleClick(e); Input = !Input; UpdateInput(); OnChange?.Invoke(); })">
 	<MaterialIcon Icon="@(Input ? "check_box" : "check_box_outline_blank")" IconStyle="@($"color: {(Input ? "#0080ff" : "white")}")"/>
 	@if (!String.IsNullOrWhiteSpace(Label))
 	{
@@ -12,11 +12,4 @@
 	[Parameter] public string? Label { get; set; }
 
 	[Parameter] public Action? OnChange { get; set; }
-
-	private void OnClick()
-	{
-		Input = !Input;
-		UpdateInput();
-		OnChange?.Invoke();
-	}
 }
