--- a/MemoryMosaic/Shared/Buttons/LinkButton.razor
+++ b/MemoryMosaic/Shared/Buttons/LinkButton.razor
@@ -1,14 +1,10 @@
-@inherits Button
+@inherits IconTextButton
 
-<a id="@ID" class="iconTextBtn @Class" href="@Href" title="@Title">
+<a id="@ID" class="iconTextBtn @Class" href="@Href" @onclick="@HandleClick" title="@Title">
 	<MaterialIcon Icon="@Icon" IconStyle="@IconStyle"/>
 	<span style="@TextStyle">@Text</span>
 </a>
 
 @code {
-	[Parameter, EditorRequired] public string Text { get; set; } = null!;
-
 	[Parameter, EditorRequired] public string Href { get; set; } = null!;
-
-	[Parameter] public string? TextStyle { get; set; }
 }
