--- a/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
@@ -1,8 +1,11 @@
-<div class="thumbnail" @onclick="@(eventArgs => OnClick.Invoke(eventArgs, Index))">
+@inherits Component
+@namespace MemoryMosaic.Shared.LibraryContentViewer
+
+<div class="thumbnail" @onmousedown="@ThumbnailClick" @onclick:stopPropagation="true"> @* https://stackoverflow.com/a/64724214 *@
 	@if (Item.Starred) { <MaterialIcon Icon="star" Class="star-icon"/> }
 	@if (Item.Video) { <MaterialIcon Icon="play_circle_outline" Class="video-icon"/> }
-	<Checkbox Input="@Parent.SelectedItems.Contains(Item.Id)" OnChange="@CheckClicked"/>
-	<img src="data:image/jpg;base64,@Item.Thumbnail" alt="@Item.Path" @onclick="@ImgClicked" loading="lazy"/>
+	<Checkbox Input="@LCV.SelectedItems.Contains(Id)" EventArgsOnClick="@CheckClick"/>
+	<img src="data:image/jpg;base64,@Item.Thumbnail" alt="@Item.Path" loading="lazy" @onclick="@ImgClick"/>
 </div>
 
 @code {
@@ -10,34 +13,49 @@
 	public required LibraryItem Item { get; set; }
 	
 	[Parameter, EditorRequired]
-	public required LibraryContentViewer Parent { get; set; }
+	public required LibraryContentViewer LCV { get; set; }
 	
 	[Parameter, EditorRequired]
 	public required int Index { get; set; }
-	
-	[Parameter, EditorRequired]
-	public required Action<MouseEventArgs, int> OnClick { get; set; }
+
+	private Guid Id => Item.Id;
 }
 
 @functions {
 	private void ToggleSelected()
 	{
-		if (Parent.SelectedItems.Contains(Item.Id))
-			Parent.SelectedItems.Remove(Item.Id);
+		if (LCV.SelectedItems.Contains(Id))
+			LCV.SelectedItems.Remove(Id);
 		else
-			Parent.SelectedItems.Add(Item.Id);
-
-		Parent.Rerender();
-	}
-	
-	private void CheckClicked()
-	{
-		ToggleSelected();
+			LCV.SelectedItems.Add(Id);
+		
+		LCV.LastSelectedIndex = Index;
+		LCV.Rerender();
 	}
 
-	private void ImgClicked(MouseEventArgs eventArgs)
+	private void ThumbnailClick(MouseEventArgs e)
 	{
-		if (Parent.SelectedItems.Count > 0 || eventArgs.CtrlKey)
-			CheckClicked();
+		if (e.ShiftKey)
+			LCV.ChangeRangeState(LCV.LastSelectedIndex, Index, true);
 	}
-}
+
+	private void CheckClick(MouseEventArgs e)
+	{
+		if (e.AltKey)
+			LCV.SetFullscreenItem(Index);
+		else if (!e.ShiftKey)
+			ToggleSelected();
+		
+		StateHasChanged(); //Ensures the checkbox is selected if clicked while Shift held down.
+	}
+
+	private void ImgClick(MouseEventArgs e)
+	{
+		if (e.AltKey)
+			LCV.SetFullscreenItem(Index);
+		else if ((LCV.SelectedItems.Count > 0 || e.CtrlKey) && !e.ShiftKey)
+			ToggleSelected();
+		else if (!e.ShiftKey)
+			LCV.SetFullscreenItem(Index);
+	}
+ }
