Add CtrlLeft and CtrlRight hotkeys to FV

--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -104,7 +104,7 @@
 		<KeyboardShortcuts Left="@MoveLeft" Right="@MoveRight"/>
 	}
 
-	<KeyboardShortcuts AltLeft="@Disable" Esc="@Disable" I="@infoVisibility.Toggle"/>
+	<KeyboardShortcuts AltLeft="@Disable" CtrlLeft="@MoveLeft" CtrlRight="@MoveRight" Esc="@Disable" I="@infoVisibility.Toggle"/>
 }
 
 @code {
