--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -89,14 +89,14 @@
     private CollectionCreator collectionCreator = null!;
 
     [Parameter, EditorRequired] public HashSet<Guid> SelectedItems { get; set; } = null!;
-
-    [Parameter] public Guid SelectedItem { get; set; } = Guid.Empty; //Used in LCV when viewing a single item.
     
     [Parameter] public Action? Rerender { get; set; } //Used to rerender LCV after adding items.
     
     [Parameter] public Action? OnCheckClicked { get; set; } //Used in Import for overriding the default behavior.
 
     [Parameter] public bool ClearSelectedOnConfirm { get; set; } = true; //Used in Import.
+    
+    public Guid SelectedItem { get; set; } = Guid.Empty; //Used in LCV when viewing a single item.
     
     protected override void OnInitialized() => RefreshData();
 
