--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -20,7 +20,8 @@
 			<IconButton Icon="trash" OnClick="@DeleteButtonClick"/>
 		</div>
 
-		@if (Index > 0 || (bool) TopLoader?.HasMoreRows)
+		
+		@if (Index > 0 || TopLoader is {HasMoreRows: true})
 		{
 			<div class="sideButton" id="leftBtn" @onclick="@MoveLeft"><IconButton Icon="arrow_back_ios"/></div>
 		}
@@ -158,11 +159,11 @@
 @functions {
 	private static string FormatDateTaken(DateTime? dateTaken) => dateTaken == null ? "No Date Taken" : dateTaken.Value.ToString("ddd, MMM d, yyyy hh:mm:ss tt");
 
-	private void UpdateDescription() => C.UpdateDescription(Current.Id, Current.Description);
+	public void UpdateDescription() => C.UpdateDescription(Current.Id, Current.Description);
 
 	private void MoveLeft()
 	{
-		if (Index == 0 && (bool) TopLoader?.HasMoreRows)
+		if (Index == 0 && TopLoader is {HasMoreRows: true})
 			Index += TopLoader.AddContent(100);
 		
 		Index--;
@@ -170,7 +171,7 @@
 
 	private void MoveRight()
 	{
-		if (Index == Content.Count - 1 && (bool) BottomLoader?.HasMoreRows)
+		if (Index == Content.Count - 1 && BottomLoader is {HasMoreRows: true})
 			BottomLoader.AddContent();
 
 		Index++;
