--- a/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/FullscreenViewer/FullscreenViewer.razor
@@ -10,7 +10,6 @@
 			<IconButton Icon="info" OnClick="@infoVisibility.Toggle"/>
 			<IconButton Icon="collections" OnClick="@(() => CollectionSelector.Enable())"/>
 			<IconButton Icon="@(Current.Starred ? "star" : "star_outline")" OnClick="@UpdateStarred"/>
-			<IconButton Icon="edit"/>
 			
 			@if (TrashPage)
 			{
@@ -56,7 +55,7 @@
 			<div class="field" title="Date Taken">
 				<MaterialIcon Icon="photo_camera"/>
 				<span>@FormatDateTaken(current.DateTaken)</span>
-				<IconButton Icon="edit"/>
+				<IconButton Icon="edit" OnClick="@dtPickerVis.Enable"/>
 			</div>
 
 			<div class="field" title="Date Added">
@@ -96,6 +95,27 @@
 			</div>
 		}
 	</div>
+	
+	<ModalBackground Visibility="@dtPickerVis">
+		<div id="dt-picker">
+			<span>Pick New Date Taken</span>
+
+			<div>
+				@if (Current is LibraryItem li)
+				{
+					<input type="datetime-local" @bind="@newDateTaken" step="1"/>
+					<IconButton Icon="check" OnClick="@(() => { li.DateTaken = newDateTaken; dtPickerVis.Disable(); C.UpdateDateTaken(Current.Path, newDateTaken); })"/>
+				}
+				else if (Current is ImportItem ii)
+				{
+					<input type="datetime-local" @bind="@ii.CustomDateTaken" step="1"/>
+					<IconButton Icon="check" OnClick="@dtPickerVis.Disable"/>
+				}
+
+				<IconButton Icon="close" OnClick="@dtPickerVis.Disable"/>
+			</div>
+		</div>
+	</ModalBackground>
 </div>
 
 @if (Visibility.Visible)
@@ -131,7 +151,9 @@
 
 	private List<Collection>? collectionsContaining;
 
-	private ElementVisibility infoVisibility = new();
+	private ElementVisibility infoVisibility = new(), dtPickerVis = new();
+
+	private DateTime? newDateTaken;
 	
 	private int index;
 	public int Index
@@ -142,6 +164,9 @@
 			if (value < 0 || value > Content.Count) return;
 			index = value;
 			collectionsContaining = C.GetCollectionsContaining(Current.Id);
+
+			if (Current is LibraryItem li)
+				newDateTaken = li.DateTaken;
 			
 			StateHasChanged();
 
@@ -153,6 +178,7 @@
 	{
 		infoVisibility.Rerender = StateHasChanged;
 		Visibility.Rerender = RerenderParent;
+		dtPickerVis.Rerender = StateHasChanged;
 	}
 }
 
