--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -183,4 +183,46 @@
 			}
 		}
 	}
+	
+	> .modalBackground > #dt-picker {
+		@include flex-col;
+		border: 2px solid white;
+		padding-top: 8px;
+		padding-left: 8px;
+		border-radius: 4px;
+
+		> div {
+			@include flex-row;
+			margin-right: 4px;
+			margin-bottom: 4px;
+
+			> input[type="datetime-local"] {
+				background-color: black;
+				border: 1px solid white;
+				margin-right: 4px;
+				padding: 2px;
+				border-radius: 4px;
+				width: fit-content;
+
+				&:focus {
+					border: 1px solid #0080ff;
+					outline: 1px solid #0080ff;
+				}
+
+				&::-webkit-datetime-edit-day-field:focus { background-color: #0080ff; }
+				&::-webkit-datetime-edit-month-field:focus { background-color: #0080ff; }
+				&::-webkit-datetime-edit-year-field:focus { background-color: #0080ff; }
+
+				&::-webkit-calendar-picker-indicator {
+					margin-left: -20px;
+					font-size: 16px;
+				}
+			}
+
+			> .iconBtn {
+				margin-left: 2px;
+				margin-right: 2px;
+			}
+		}
+	}
 }
